--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=c##dilip
+spring.datasource.username=c##dili
 spring.datasource.password=dilip
