--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,8 @@
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=c##dilip
 spring.datasource.password=dilip
+
+
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
