--- a/application.properties
+++ b/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=dilip
 
 
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 
 #Eureka Server URL 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
