--- a/application.properties
+++ b/application.properties
@@ -10,3 +10,4 @@ spring.jpa.hibernate.ddl-auto=none
 #Eureka Server URL 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+jwt.secret.key=dilipsingh
